comment extra builds

--- a/build.yaml
+++ b/build.yaml
@@ -14,23 +14,23 @@
 ---
 
 include:
-  - board: nrfmicro_13
+  # - board: nrfmicro_13
+  #   shield: corne_left
+
+  # - board: nrfmicro_13
+  #   shield: corne_right
+
+  - board: nice_nano_v2
     shield: corne_left
 
-  - board: nrfmicro_13
-    shield: corne_right
-
-  - board: nice_nano_v2
-    shield: corne_left
-
   - board: nice_nano_v2
     shield: corne_right
 
-  - board: nice_nano
-    shield: reviung41
+  # - board: nice_nano
+  #   shield: reviung41
 
-  - board: nice_nano_v2
-    shield: reviung41
+  # - board: nice_nano_v2
+  #   shield: reviung41
 
 
 # board: [ "nice_nano" ]
