--- a/build.yaml
+++ b/build.yaml
@@ -26,6 +26,9 @@ include:
   - board: nice_nano_v2
     shield: corne_right
 
+  - board: nice_nano_v2
+    shield: settings_reset
+
   # - board: nice_nano
   #   shield: reviung41
 
