add support connect to usb

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -12,7 +12,8 @@
 # ///  Sleep mode  ///
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=2100000
-CONFIG_ZMK_USB=n
+
+CONFIG_ZMK_USB=y
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_GATT_AUTO_SEC_REQ=y
