--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,15 +1,15 @@
-# ///  RGB Underglow  ///
+# RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 
-# ///  OLED Display  ///
+# OLED Display
 # CONFIG_ZMK_DISPLAY=y
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=n
 
-# ///  Sleep mode  ///
+# Sleep mode
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=2100000
 
