--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,22 +1,16 @@
-# RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-# CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-
-# OLED Display
-# CONFIG_ZMK_DISPLAY=y
-
-# Turn on logging, and set ZMK logging to debug output
+# NOTE turn on logging, and set zmk logging to debug output
 # CONFIG_ZMK_USB_LOGGING=n
 
-# Sleep mode
+# NOTE sleep mode
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=2100000
 
-CONFIG_ZMK_USB=y
-
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_BT_GATT_AUTO_SEC_REQ=y
-CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_250PPM=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+
+
+CONFIG_ZMK_BLE=n
+# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+CONFIG_ZMK_USB=y
