--- a/build.yaml
+++ b/build.yaml
@@ -12,33 +12,10 @@
 #     shield: reviung41
 #
 ---
-
 include:
-  # - board: nrfmicro_13
-  #   shield: corne_left
-
-  # - board: nrfmicro_13
-  #   shield: corne_right
-
   - board: nice_nano_v2
-    shield: corne_left
-
+    shield: corne_left nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: corne_right
-
+    shield: corne_right nice_view_adapter nice_view
   - board: nice_nano_v2
     shield: settings_reset
-
-  # - board: nice_nano
-  #   shield: reviung41
-
-  # - board: nice_nano_v2
-  #   shield: reviung41
-
-
-# board: [ "nice_nano" ]
-# shield: [ "reviung41" ]
-# board: [ "nrfmicro_13" ]
-# shield: [ "corne_left", "corne_right" ]
- 
- 
