--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,16 +1,14 @@
-# NOTE turn on logging, and set zmk logging to debug output
-# CONFIG_ZMK_USB_LOGGING=n
-
-# NOTE sleep mode
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=2100000
-
-CONFIG_CLOCK_CONTROL_NRF_K32SRC_250PPM=y
+# Increase transmission strength.
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
+# No WPM widget
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
-CONFIG_ZMK_BLE=n
-# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+# Default widget
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 
-CONFIG_ZMK_USB=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
